--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,7 @@
 }
 
 .time-piece {
+    position: absolute;
     margin: auto;
     vertical-align: middle;
 }
@@ -47,4 +48,37 @@
     font-size: 16px;
     font-weight: 400;
     text-shadow: 0 0 35px white;
+}
+
+.weather {
+    position: absolute;
+    align-self: start;
+    justify-self: start;
+    margin-top: 5px;
+    text-shadow: 0 0 35px white;
+}
+
+    .weather .city {
+        padding: 0;
+        font-size: 22px;
+        font-weight: 200;
+    }
+
+    #linebreak {
+        font-size: 25px;
+        padding: 0;
+        margin: 2px 0;
+    }
+
+.small {
+    font-size: 20px;
+    font-weight: 200;
+}
+
+.select-overlay {
+    position: fixed;
+    z-index: 50;
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../images/overlay.png")
 }
