--- a/style/style.css
+++ b/style/style.css
@@ -9,21 +9,28 @@
 }
 
 .main-area {
-    display: flex;
     height: 100vh;
     width: 100vw;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
 }
 
 .background {
-    position: absolute;
-    z-index: -10;
+    position: fixed;
     height: 100vh;
     width: 100vw;
+    z-index: -10;
     background-image: none;
     opacity: 0.4;
+}
+
+.parallax {
+    position: absolute;
+    display: flex;
+    height: 94vh;
+    width: 94vw;
+    padding: 3vh 3vw;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .time-piece {
@@ -54,7 +61,6 @@
     position: absolute;
     align-self: start;
     justify-self: start;
-    margin-top: 5px;
     text-shadow: 0 0 35px white;
 }
 
