--- a/style/style.css
+++ b/style/style.css
@@ -83,23 +83,13 @@
     font-weight: 200;
 }
 
-.credit {
-    display: none;
-    text-align: right;
-    align-self: flex-end;
-    justify-self: flex-end;
-    margin-right: 0;
-    margin-left: auto;
+.greeting {
+    margin: auto auto 10px auto;
 }
 
-.credit p {
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 19px;
-}
-
-.credit p b {
-    font-size: 15px;
+.greeting p {
+    font-size: 30px;
+    font-weight: 200;
 }
 
 .select-overlay {
